ConsultingHub/force-app/main/default/objects/Business_Priorities__c/Business_Priorities__c.object-meta.xml
<CustomObject>
    <label>Business Priority</label>
    <nameField>
        <displayFormat>BP-{00000}</displayFormat>
        <label>Business Priority</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Priorities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>