ConsultingHub/force-app/main/default/objects/Business_Priorities__c/fields/Business_Value_Driver__c.field-meta.xml
<CustomField>
    <fullName>Business_Value_Driver__c</fullName>
    <label>Business Value Driver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>