ConsultingHub/force-app/main/default/objects/Business_Priorities__c/fields/Finance_LOB__c.field-meta.xml
<CustomField>
    <fullName>Finance_LOB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance LOB</label>
    <type>Checkbox</type>
</CustomField>