ConsultingHub/force-app/main/default/objects/Business_Priorities__c/fields/Human_Resources_LOB__c.field-meta.xml
<CustomField>
    <fullName>Human_Resources_LOB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Human Resources LOB</label>
    <type>Checkbox</type>
</CustomField>