ConsultingHub/force-app/main/default/objects/Business_Priorities__c/fields/IT_LOB__c.field-meta.xml
<CustomField>
    <fullName>IT_LOB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT LOB</label>
    <type>Checkbox</type>
</CustomField>