ConsultingHub/force-app/main/default/objects/Business_Priorities__c/fields/KPIs__c.field-meta.xml
<CustomField>
    <fullName>KPIs__c</fullName>
    <label>KPIs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>