ConsultingHub/force-app/main/default/objects/Business_Priorities__c/fields/Marketing_LOB__c.field-meta.xml
<CustomField>
    <fullName>Marketing_LOB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing LOB</label>
    <type>Checkbox</type>
</CustomField>