ConsultingHub/force-app/main/default/objects/Business_Priorities__c/fields/Sales_LOB__c.field-meta.xml
<CustomField>
    <fullName>Sales_LOB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales LOB</label>
    <type>Checkbox</type>
</CustomField>