ConsultingHub/force-app/main/default/objects/Business_Priorities__c/fields/Service_LOB__c.field-meta.xml
<CustomField>
    <fullName>Service_LOB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service LOB</label>
    <type>Checkbox</type>
</CustomField>