ConsultingHub/force-app/main/default/objects/Business_Priorities__c/fields/Strategic_Focus__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Focus__c</fullName>
    <label>Strategic Focus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>