ConsultingHub/force-app/main/default/objects/Business_Priorities__c/fields/VCM_Clouds__c.field-meta.xml
<CustomField>
    <fullName>VCM_Clouds__c</fullName>
    <label>VCM Clouds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>