ConsultingHub/force-app/main/default/objects/Business_Priorities__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Impact__c</columns>
    <columns>Business_Value_Lever__c</columns>
    <columns>Business_Value_Driver__c</columns>
    <columns>VCM_Clouds__c</columns>
    <columns>Sales_LOB__c</columns>
    <columns>Service_LOB__c</columns>
    <columns>Marketing_LOB__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>